--- a/shard.yml
+++ b/shard.yml
@@ -18,7 +18,9 @@ dependencies:
   cache:
     github: mamantoha/cache
     version: ~> 0.0.1
-
+  crest:
+    github: mamantoha/crest
+    version: ~> 0.9.8
 
 crystal: 0.24.2
 
