rename to shards-info

--- a/shard.yml
+++ b/shard.yml
@@ -1,12 +1,12 @@
-name: crystal-shards
-version: 0.1.0
+name: shards-info
+version: 0.2.0
 
 authors:
   - Anton Maminov <anton.linux@gmail.com>
 
 targets:
   crystal-shards:
-    main: src/crystal-shards.cr
+    main: src/shards-info.cr
 
 dependencies:
   kemal:
