add readme to shard page

--- a/shard.yml
+++ b/shard.yml
@@ -27,6 +27,8 @@ dependencies:
   humanize_time:
     github: mamantoha/humanize_time
     branch: master
+  markd:
+    github: icyleaf/markd
 
 crystal: 0.24.2
 
