--- a/shard.yml
+++ b/shard.yml
@@ -33,6 +33,8 @@ dependencies:
     github: icyleaf/markd
   kemal-flash:
     github: neovintage/kemal-flash
+  autolink:
+    github: crystal-community/autolink.cr
 
 crystal: 0.24.2
 
