use raven.cr from develop branch

--- a/shard.yml
+++ b/shard.yml
@@ -21,7 +21,7 @@ dependencies:
     branch: master
   cache:
     github: mamantoha/cache
-    version: ~> 0.0.5
+    version: ~> 0.0.7
   crest:
     github: mamantoha/crest
     version: ~> 0.10.2
@@ -38,8 +38,7 @@ dependencies:
   autolink:
     github: crystal-community/autolink.cr
   raven:
-    # github: sija/raven.cr
-    github: mamantoha/raven.cr
-    branch: kemal-integration
+    github: sija/raven.cr
+    branch: develop
 
 license: MIT
