--- a/shard.yml
+++ b/shard.yml
@@ -30,7 +30,7 @@ dependencies:
     branch: master
   humanize_time:
     github: mamantoha/humanize_time
-    branch: embed-translations
+    version: ~> 0.3.0
   markd:
     github: icyleaf/markd
   kemal-flash:
