--- a/shard.yml
+++ b/shard.yml
@@ -1,7 +1,7 @@
 name: shards-info
 version: 0.2.0
 
-crystal: 0.25.1
+crystal: 0.26.0
 
 authors:
   - Anton Maminov <anton.linux@gmail.com>
@@ -13,6 +13,7 @@ targets:
 dependencies:
   kemal:
     github: kemalcr/kemal
+    branch: master
     version: ~> 0.23.0
   kemal-session:
     github: kemalcr/kemal-session
@@ -38,7 +39,10 @@ dependencies:
   autolink:
     github: crystal-community/autolink.cr
   raven:
-    github: sija/raven.cr
-    branch: develop
+    github: mamantoha/raven.cr
+    branch: crystal_0.26
+    # path: ../raven.cr
+    # github: sija/raven.cr
+    # branch: develop
 
 license: MIT
