--- a/shard.yml
+++ b/shard.yml
@@ -16,6 +16,9 @@ dependencies:
     version: ~> 0.24.0
   kemal-session:
     github: kemalcr/kemal-session
+  spec-kemal:
+    github: kemalcr/spec-kemal
+    branch: master
   slang:
     github: jeromegn/slang
     branch: master
