--- a/shard.yml
+++ b/shard.yml
@@ -1,7 +1,7 @@
 name: shards-info
 version: 0.2.0
 
-crystal: 0.26.0
+crystal: 0.27.0
 
 authors:
   - Anton Maminov <anton.linux@gmail.com>
@@ -13,12 +13,8 @@ targets:
 dependencies:
   kemal:
     github: kemalcr/kemal
-    version: ~> 0.24.0
   kemal-session:
     github: kemalcr/kemal-session
-  spec-kemal:
-    github: kemalcr/spec-kemal
-    branch: master
   slang:
     github: jeromegn/slang
     branch: master
@@ -39,6 +35,10 @@ dependencies:
     github: crystal-community/autolink.cr
   raven:
     github: Sija/raven.cr
-    version: ~> 1.0.0
+    version: ~> 1.1
+
+development_dependencies:
+  spec-kemal:
+    github: kemalcr/spec-kemal
 
 license: MIT
