--- a/shard.yml
+++ b/shard.yml
@@ -1,7 +1,7 @@
 name: shards-info
 version: 0.2.0
 
-crystal: 0.28.0
+crystal: 0.29.0
 
 authors:
   - Anton Maminov <anton.linux@gmail.com>
@@ -35,6 +35,7 @@ dependencies:
     github: crystal-community/autolink.cr
   raven:
     github: Sija/raven.cr
+    branch: develop
 
 development_dependencies:
   spec-kemal:
