--- a/shard.yml
+++ b/shard.yml
@@ -34,6 +34,8 @@ dependencies:
     github: neovintage/kemal-flash
   autolink:
     github: crystal-community/autolink.cr
+  any_hash:
+    github: Sija/any_hash.cr
   raven:
     github: Sija/raven.cr
 
