--- a/shard.yml
+++ b/shard.yml
@@ -1,10 +1,10 @@
 name: shards-info
 version: 0.2.0
 
-crystal: 0.30.1
+crystal: 0.31.0
 
 authors:
-  - Anton Maminov <anton.linux@gmail.com>
+  - Anton Maminov <anton.maminov@gmail.com>
 
 targets:
   crystal-shards:
