--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 export KEMAL_ENV=
 export GITHUB_USER=
 export GITHUB_KEY=
+export GITLAB_ACCESS_TOKEN=
 export SENTRY_DSN=
 export GOOGLE_ANALYTICS_ID=
