use clear instead of jennifer

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-export KEMAL_ENV=
+export KEMAL_ENV=development
+export DATABASE_URL=postgres://postgres@localhost/shards_info_development
 export GITHUB_USER=
 export GITHUB_KEY=
 export GITLAB_ACCESS_TOKEN=
