add mosquito and create job to sync
recently updated repositories on Github

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 export KEMAL_ENV=development
 export DATABASE_URL=postgres://postgres@localhost/shards_info_development
+export REDIS_URL=redis://localhost:6379
 export GITHUB_USER=
 export GITHUB_KEY=
 export GITLAB_ACCESS_TOKEN=
