--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ dist: xenial
 
 before_script:
   - psql -c 'create database shards_info_test;' -U postgres
-  - crystal src/db_cli.cr -- migrate
+  - crystal src/db.cr -- migrate
 
 script:
   - crystal spec
