--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-export KEMAL_ENV=development
-export DATABASE_URL=postgres://postgres@localhost/shards_info_development
-export REDIS_URL=redis://localhost:6379
-export GITHUB_USER=
-export GITHUB_KEY=
-export GITLAB_ACCESS_TOKEN=
-export SENTRY_DSN=
-export GOOGLE_ANALYTICS_ID=
+KEMAL_ENV=development
+DATABASE_URL=postgres://postgres@localhost/shards_info_development
+REDIS_URL=redis://localhost:6379
+GITHUB_USER=
+GITHUB_KEY=
+GITLAB_ACCESS_TOKEN=
+SENTRY_DSN=
+GOOGLE_ANALYTICS_ID=
