add delegators to user and repository models

--- a/shard.yml
+++ b/shard.yml
@@ -29,6 +29,8 @@ dependencies:
     github: mamantoha/clear
     branch: fix/delete-and-unlink
     # path: ../clear
+  delegator:
+    github: Schniz/delegator.cr
   slang:
     github: jeromegn/slang
     branch: master
