--- a/shard.yml
+++ b/shard.yml
@@ -20,11 +20,8 @@ dependencies:
     github: mamantoha/kemal
     branch: crystal-0.33
   clear:
-    # github: anykeyh/clear
-    # branch: master
-    github: mamantoha/clear
-    branch: fix/delete-and-unlink
-    # path: ../clear
+    github: anykeyh/clear
+    branch: master
   delegator:
     github: Schniz/delegator.cr
   slang:
