--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/mamantoha/shards-info#readme",
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.12.1",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.4.2",
     "expose-loader": "^0.7.5",
     "file-loader": "^5.0.2",
