--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: crystal
 dist: xenial
 
+crystal:
+  - latest
+  - nightly
+
 before_script:
   - psql -c 'create database shards_info_test;' -U postgres
   - crystal src/db.cr -- migrate
