--- a/shard.yml
+++ b/shard.yml
@@ -19,9 +19,9 @@ dependencies:
     github: mamantoha/kemal
     branch: develop
   pg:
-    # TODO https://github.com/will/crystal-pg/pull/205
+    # TODO https://github.com/will/crystal-pg/pull/206
     # github: will/crystal-pg
-    github: mamantoha/crystal-pg
+    github: bcardiff/crystal-pg
     branch: crystal/0.35.0
   clear:
     github: anykeyh/clear
