--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,13 @@
 language: crystal
 dist: xenial
 
+crystal:
+  - latest
+  - nightly
+
 before_script:
   - psql -c 'create database shards_info_test;' -U postgres
-  - crystal src/db.cr -- migrate
+  - crystal src/db.cr migrate
 
 script:
   - crystal spec
