--- a/shard.yml
+++ b/shard.yml
@@ -51,6 +51,8 @@ dependencies:
   shards:
     github: crystal-lang/shards
     version: ~> 0.10.0
+  logger:
+    github: 84codes/logger.cr
 
 development_dependencies:
   spec-kemal:
