--- a/shard.yml
+++ b/shard.yml
@@ -52,7 +52,7 @@ dependencies:
     github: crystal-lang/shards
     version: ~> 0.10.0
   logger:
-    github: 84codes/logger.cr
+    github: crystal-lang/logger.cr
 
 development_dependencies:
   spec-kemal:
