allow failures on Crystal nightly

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,10 @@ script:
   - crystal spec
   - crystal tool format --check
 
+jobs:
+  allow_failures:
+  - crystal: nightly
+
 services:
   - postgresql
   - redis-server
