--- a/shard.yml
+++ b/shard.yml
@@ -16,8 +16,8 @@ targets:
 
 dependencies:
   kemal:
-    github: mamantoha/kemal
-    branch: develop
+    github: kemalcr/kemal
+    branch: master
   clear:
     github: anykeyh/clear
     commit: f9aa2369a665f413ea27a8000e8884c778f28d36
