--- a/shard.yml
+++ b/shard.yml
@@ -19,8 +19,10 @@ dependencies:
     github: kemalcr/kemal
     branch: master
   clear:
-    github: anykeyh/clear
-    commit: f9aa2369a665f413ea27a8000e8884c778f28d36
+    # github: anykeyh/clear
+    # commit: f9aa2369a665f413ea27a8000e8884c778f28d36
+    github: mamantoha/clear
+    branch: develop
   delegator:
     github: Schniz/delegator.cr
   slang:
@@ -52,8 +54,6 @@ dependencies:
   shards:
     github: crystal-lang/shards
     version: ~> 0.10.0
-  logger:
-    github: crystal-lang/logger.cr
 
 development_dependencies:
   spec-kemal:
