--- a/shard.yml
+++ b/shard.yml
@@ -29,7 +29,8 @@ dependencies:
     github: jeromegn/slang
     branch: master
   cache:
-    github: mamantoha/cache
+    github: crystal-cache/cache
+    version: ~> 0.12.0
   crest:
     github: mamantoha/crest
   mosquito:
@@ -47,7 +48,7 @@ dependencies:
     github: crystal-community/autolink.cr
   raven:
     github: Sija/raven.cr
-    version: 1.8.1
+    version: ~> 1.8.0
   dotenv:
     github: gdotdesign/cr-dotenv
     branch: master
