--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@fortawesome/fontawesome-free": "^5.15.1",
     "css-loader": "^5.0.1",
     "expose-loader": "^1.0.3",
+    "html-webpack-plugin": "^4.5.1",
     "mini-css-extract-plugin": "^1.3.3",
     "node-sass": "^5.0.0",
     "sass-loader": "^10.1.0",
@@ -39,6 +40,7 @@
     "jquery": "^3.5.1",
     "moveto": "^1.8.2",
     "popper.js": "^1.16.1",
+    "themes-switch": "^1.0.11",
     "turbolinks": "^5.2.0"
   }
 }
