--- a/shard.yml
+++ b/shard.yml
@@ -47,14 +47,12 @@ dependencies:
     github: crystal-community/autolink.cr
   raven:
     github: Sija/raven.cr
-    branch: develop
-    # version: ~> 1.9.1
+    version: ~> 1.9.1
   dotenv:
     github: gdotdesign/cr-dotenv
     branch: master
-  shards:
-    github: crystal-lang/shards
-    version: ~> 0.10.0
+  shards_spec:
+    github: mamantoha/shards_spec
 
 development_dependencies:
   spec-kemal:
