--- a/.github/workflows/crystal.yml
+++ b/.github/workflows/crystal.yml
@@ -52,6 +52,8 @@ jobs:
       - name: Run tests
         run: crystal spec
         env:
+          DATABASE_URL: postgres://postgres:postgres@localhost/shards_info_test
+          KEMAL_ENV: test
           POSTGRES_HOST: postgres
           POSTGRES_PORT: 5432
           POSTGRES_USER: postgres
