--- a/.github/workflows/crystal.yml
+++ b/.github/workflows/crystal.yml
@@ -9,18 +9,19 @@ on:
 jobs:
   check_format:
     runs-on: ubuntu-latest
+    container: crystallang/crystal
     steps:
-      - name: Install Crystal
-        uses: oprypin/install-crystal@v1
       - name: Check out repository code
         uses: actions/checkout@v2
+
       - name: Check format
         run: crystal tool format --check
   test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        crystal: [latest, nightly]
+        crystal: ["crystallang/crystal", "crystallang/crystal:nightly"]
+    container: ${{ matrix.crystal }}
     # Service containers to run with `container-job`
     services:
       # Label used to access the service container
@@ -39,11 +40,6 @@ jobs:
     steps:
       - name: Install dependencies
         run: sudo apt-get install build-essential
-
-      - name: Install Crystal
-        uses: oprypin/install-crystal@v1
-        with:
-          crystal: ${{ matrix.crystal }}
 
       # Downloads a copy of the code in your repository before running CI tests
       - name: Check out repository code
