--- a/.github/workflows/crystal.yml
+++ b/.github/workflows/crystal.yml
@@ -38,6 +38,9 @@ jobs:
           --health-timeout 5s
           --health-retries 5
     steps:
+      - name: Install dependencies
+        run: apt-get install cmake
+
       # Downloads a copy of the code in your repository before running CI tests
       - name: Check out repository code
         uses: actions/checkout@v2
