--- a/.github/workflows/crystal.yml
+++ b/.github/workflows/crystal.yml
@@ -9,8 +9,10 @@ on:
 jobs:
   check_format:
     runs-on: ubuntu-latest
-    container: crystallang/crystal
     steps:
+      - name: Install Crystal
+        uses: oprypin/install-crystal@v1
+
       - name: Check out repository code
         uses: actions/checkout@v2
 
@@ -20,8 +22,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        crystal: ["crystallang/crystal", "crystallang/crystal:nightly"]
-    container: ${{ matrix.crystal }}
+        crystal: [latest, nightly]
     # Service containers to run with `container-job`
     services:
       # Label used to access the service container
@@ -39,7 +40,12 @@ jobs:
           --health-retries 5
     steps:
       - name: Install dependencies
-        run: apt-get install cmake
+        run: apt-get install build-essential
+
+      - name: Install Crystal
+        uses: oprypin/install-crystal@v1
+        with:
+          crystal: ${{ matrix.crystal }}
 
       # Downloads a copy of the code in your repository before running CI tests
       - name: Check out repository code
