--- a/.github/workflows/crystal.yml
+++ b/.github/workflows/crystal.yml
@@ -44,7 +44,7 @@ jobs:
 
     steps:
       - name: Install dependencies
-        run: apt-get install build-essential
+        run: sudo apt-get install build-essential
 
       - name: Install Crystal
         uses: oprypin/install-crystal@v1
