--- a/.github/workflows/crystal.yml
+++ b/.github/workflows/crystal.yml
@@ -62,6 +62,7 @@ jobs:
       - name: Prepare database
         run: crystal ./spec/initdb.cr
         env:
+          DATABASE_URL: postgres://postgres:postgres@localhost/shards_info_test
           POSTGRES_HOST: localhost
           POSTGRES_PORT: 5432
           POSTGRES_USER: postgres
