--- a/.github/workflows/crystal.yml
+++ b/.github/workflows/crystal.yml
@@ -63,6 +63,11 @@ jobs:
         run: crystal ./spec/initdb.cr
         env:
           DATABASE_URL: postgres://postgres:postgres@localhost/shards_info_test
+          POSTGRES_HOST: postgres
+          POSTGRES_PORT: 5432
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: postgres
 
       - name: Run tests
         run: crystal spec
