--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 KEMAL_ENV=development
+KEMAL_SESSION_SECRET=some_secret
 DATABASE_URL=postgres://postgres@localhost/shards_info_development
 REDIS_URL=redis://localhost:6379
 GITHUB_USER=
@@ -6,3 +7,5 @@ GITHUB_KEY=
 GITLAB_ACCESS_TOKEN=
 SENTRY_DSN=
 GOOGLE_ANALYTICS_ID=
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
