--- a/shard.yml
+++ b/shard.yml
@@ -17,6 +17,10 @@ targets:
 dependencies:
   kemal:
     github: kemalcr/kemal
+  kemal-session:
+    github: kemalcr/kemal-session
+  multi_auth:
+    github: msa7/multi_auth
   clear:
     # github: anykeyh/clear
     # branch: master
