--- a/shard.yml
+++ b/shard.yml
@@ -19,6 +19,9 @@ dependencies:
     github: kemalcr/kemal
   kemal-session:
     github: kemalcr/kemal-session
+  kemal-flash:
+    github: mamantoha/kemal-flash
+    branch: develop
   multi_auth:
     github: msa7/multi_auth
   clear:
