--- a/shard.yml
+++ b/shard.yml
@@ -25,6 +25,7 @@ dependencies:
   multi_auth:
     github: msa7/multi_auth
   clear:
+    # path: ../clear
     # github: anykeyh/clear
     # branch: master
     github: mamantoha/clear
