render with Kilt

--- a/shard.yml
+++ b/shard.yml
@@ -17,11 +17,14 @@ targets:
 dependencies:
   kemal:
     github: kemalcr/kemal
+    branch: master
   kemal-session:
     github: kemalcr/kemal-session
   kemal-flash:
     github: mamantoha/kemal-flash
     branch: develop
+  kilt:
+    github: jeromegn/kilt
   multi_auth:
     github: msa7/multi_auth
   clear:
