--- a/package.json
+++ b/package.json
@@ -23,18 +23,18 @@
   "homepage": "https://github.com/mamantoha/shards-info#readme",
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
-    "css-loader": "^6.3.0",
+    "css-loader": "^6.4.0",
     "expose-loader": "^3.0.0",
-    "mini-css-extract-plugin": "^2.3.0",
+    "mini-css-extract-plugin": "^2.4.2",
     "node-sass": "^6.0.1",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.3.0",
-    "webpack": "^5.56.1",
-    "webpack-cli": "^4.8.0",
-    "trim-newlines": ">=4.0.2"
+    "trim-newlines": ">=4.0.2",
+    "webpack": "^5.58.1",
+    "webpack-cli": "^4.9.0"
   },
   "dependencies": {
-    "bootstrap": "^5.1.1",
+    "bootstrap": "^5.1.3",
     "jqcloud2": "^2.0.3",
     "jquery": "^3.6.0",
     "moveto": "^1.8.2",
