temporary switch to cr-cmark-gfm fork

--- a/shard.yml
+++ b/shard.yml
@@ -53,8 +53,10 @@ dependencies:
   humanize_time:
     github: mamantoha/humanize_time
   cmark:
-    github: amauryt/cr-cmark-gfm
-    branch: master
+    github: mamantoha/cr-cmark-gfm
+    # github: amauryt/cr-cmark-gfm
+    # branch: master
+    branch: fix-build-arch-linux
   noir:
     github: MakeNowJust/noir
     branch: main
