get rid of Turbolinks

--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "jqcloud2": "^2.0.3",
     "jquery": "^3.6.0",
     "moveto": "^1.8.2",
-    "popper.js": "^1.16.1",
-    "turbolinks": "^5.2.0"
+    "popper.js": "^1.16.1"
   }
 }
