use mosquito from master branch

--- a/shard.yml
+++ b/shard.yml
@@ -45,6 +45,7 @@ dependencies:
     github: mamantoha/crest
   mosquito:
     github: mosquito-cr/mosquito
+    branch: master
   emoji:
     github: veelenga/emoji.cr
     branch: master
