--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "css-loader": "^6.7.1",
     "eslint": "^8.19.0",
     "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.2.4",
+    "eslint-plugin-promise": "^6.0.0",
     "expose-loader": "^3.1.0",
     "mini-css-extract-plugin": "^2.6.0",
     "node-sass": "^7.0.1",
