--- a/package.json
+++ b/package.json
@@ -36,6 +36,10 @@
     "node-sass": "^7.0.1",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
+    "stylelint": "^14.9.1",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-standard": "^26.0.0",
+    "stylelint-config-standard-scss": "^5.0.0",
     "trim-newlines": ">=4.0.2",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2"
