--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -9,5 +9,6 @@
   "rules": {
     "selector-class-pattern": null,
     "selector-id-pattern": null
-  }
+  },
+  "ignorePatterns": ["assets/vendor/*"]
 }
