remove selector-id-pattern

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -7,8 +7,7 @@
   "plugins": [
   ],
   "rules": {
-    "selector-class-pattern": null,
-    "selector-id-pattern": null
+    "selector-class-pattern": null
   },
   "ignorePatterns": ["assets/vendor/*"]
 }
