--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "lint": "eslint assets/ .eslintrc.cjs",
-    "lint:fix": "eslint --fix assets/ .eslintrc.cjs"
+    "eslint": "eslint assets/",
+    "eslint:fix": "eslint --fix assets/",
+    "stylelint": "stylelint assets/",
+    "stylelint:fix": "stylelint --fix assets/"
   },
   "repository": {
     "type": "git",
