--- a/shard.yml
+++ b/shard.yml
@@ -20,8 +20,10 @@ dependencies:
   kemal-session:
     github: kemalcr/kemal-session
   kemal-session-redis:
-    github: neovintage/kemal-session-redis
-    branch: master
+    # github: neovintage/kemal-session-redis
+    # branch: master
+    github: mamantoha/kemal-session-redis
+    branch: develop
   kemal-flash:
     github: crystal-garage/kemal-flash
   kilt:
