--- a/shard.yml
+++ b/shard.yml
@@ -1,7 +1,7 @@
 name: shards-info
 version: 4.3.1
 
-crystal: 1.5.1
+crystal: 1.6.0
 
 authors:
   - Anton Maminov <anton.maminov@gmail.com>
@@ -17,6 +17,7 @@ targets:
 dependencies:
   kemal:
     github: kemalcr/kemal
+    version: ">= 1.3.0"
   kemal-session:
     github: kemalcr/kemal-session
   kemal-session-redis:
