--- a/.github/workflows/crystal.yml
+++ b/.github/workflows/crystal.yml
@@ -79,7 +79,8 @@ jobs:
         run: crystal spec
         env:
           DATABASE_URL: postgres://postgres:postgres@localhost/shards_info_test
-          REDIS_URL: redis://localhost:6379
+          SESSION_REDIS_URL: redis://localhost:6379/1
+          MOSQUITO_REDIS_URL: redis://localhost:6379/1
           KEMAL_ENV: test
           KEMAL_SESSION_SECRET: some_secret
           GITHUB_CLIENT_ID: ''
