--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 KEMAL_ENV=development
 KEMAL_SESSION_SECRET=some_secret
 DATABASE_URL=postgres://postgres@localhost/shards_info_development
+REDIS_URL=redis://localhost:6379/0
 SESSION_REDIS_URL=redis://localhost:6379/1
 MOSQUITO_REDIS_URL=redis://localhost:6379/2
 GITHUB_USER=
