--- a/shard.yml
+++ b/shard.yml
@@ -36,7 +36,7 @@ dependencies:
     github: msa7/multi_auth
   clear:
     github: crystal-garage/clear
-    branch: develop
+    branch: new
   delegator:
     github: Schniz/delegator.cr
   slang:
