--- a/shard.yml
+++ b/shard.yml
@@ -81,5 +81,7 @@ dependencies:
 development_dependencies:
   spec-kemal:
     github: kemalcr/spec-kemal
+  ameba:
+    github: crystal-ameba/ameba
 
 license: MIT
