--- a/.github/workflows/crystal.yml
+++ b/.github/workflows/crystal.yml
@@ -19,8 +19,9 @@ jobs:
 
   check_ameba:
     runs-on: ubuntu-latest
-    container: crystallang/crystal
     steps:
+      - name: Install Crystal
+        uses: crystal-lang/install-crystal@v1
       - name: Check out repository code
         uses: actions/checkout@v3
       - name: Install dependencies
