disable media-feature-range-notation

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -8,7 +8,8 @@
   "rules": {
     "selector-class-pattern": null,
     "max-line-length": null,
-    "value-keyword-case": null
+    "value-keyword-case": null,
+    "media-feature-range-notation": null
   },
   "ignoreFiles": [
     "**/*.js",
