Media feature ranges must always use prefix notation

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -9,7 +9,7 @@
     "selector-class-pattern": null,
     "max-line-length": null,
     "value-keyword-case": null,
-    "media-feature-range-notation": null
+    "media-feature-range-notation": "prefix"
   },
   "ignoreFiles": [
     "**/*.js",
