sanitize readme markdown

--- a/shard.yml
+++ b/shard.yml
@@ -65,6 +65,8 @@ dependencies:
   noir:
     github: MakeNowJust/noir
     branch: main
+  sanitize:
+    github: straight-shoota/sanitize
   autolink:
     github: crystal-community/autolink.cr
   raven:
