--- a/package.json
+++ b/package.json
@@ -46,11 +46,11 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.0",
     "chart.js": "^4.3.0",
     "jqcloud2": "^2.0.3",
     "jquery": "^3.7.0",
-    "moveto": "^1.8.2",
-    "popper.js": "^1.16.1"
+    "moveto": "^1.8.2"
   }
 }
